# stak_io

./: Dockerfile  pyproject.toml
app/: app.py  video_processor.py
stak_io/app/st/: stak_llm.py  streamlit_app.py
stak_io/app/stak_llm/: llm.py  st.py  st_app.py  video_processor.py
stak_io/models/: media_pipe.py
stak_io/notebooks/: mediapipe_first_test.ipynb
