[tool.poetry]
name = "stak-io"
version = "0.1.0"
description = ""
authors = ["gapav <gardpavels@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.41.1"
watchdog = "^6.0.0"
mediapipe = "^0.10.20"
plotly = "^5.24.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
